# obs-setting-docks

./: CMakeLists.txt  README.md  bitrate-dock.cpp  bitrate-dock.hpp  buildspec.json  installer.iss.in  setting-docks.cpp  setting-docks.hpp  stream-dock.cpp  stream-dock.hpp  video-dock.cpp  video-dock.hpp
.github/workflows/: build.yml
CI/macos/: setting-docks.pkgproj
data/locale/: en-US.ini
